# python-opinions

./: PYTHONSTYLE.md  README.md  TOOLING.md  pyproject.toml
