[project]
name = "python-opinion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi", "uvicorn", "sqlalchemy", "alembic",
    "pydantic", "pydantic-settings", "structlog",
    "opentelemetry-sdk", "opentelemetry-instrumentation",
    "tenacity",
]
 
[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = ["F","E","I","UP","B","W","SIM","PERF","RUF"]
 
[tool.ruff.format]
quote-style = "double"
 
[tool.pyright]  
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
